# branches-PostProcessingEffects

./: CMakeLists.txt  EffectHandler.cpp  EffectHandler.h  GameFactory.cpp  GameFactory.h  README.txt  SunModule.cpp  SunModule.h
Effects/: DoF.cpp  DoF.h  EdgeDetection.cpp  EdgeDetection.h  GaussianBlur.cpp  GaussianBlur.h  Glow.cpp  Glow.h  GrayScale.cpp  GrayScale.h  MotionBlur.cpp  MotionBlur.h  Pixelate.cpp  Pixelate.h  Saturate.cpp  Saturate.h  Shadows.cpp  Shadows.h  ShowImage.cpp  ShowImage.h  SimpleBlur.cpp  SimpleBlur.h  SimpleDoF.cpp  SimpleDoF.h  SimpleExample.cpp  SimpleExample.h  SimpleMotionBlur.cpp  SimpleMotionBlur.h  Toon.cpp  Toon.h  TwoPassBlur.cpp  TwoPassBlur.h  VolumetricLightScattering.cpp  VolumetricLightScattering.h  Wobble.cpp  Wobble.h
